--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
 		"examples": "pnpm example:transforms && pnpm example:adapter && pnpm example:types",
 		"test:examples": "pnpm test:transforms && pnpm test:actions"
 	},
-	"packageManager": "pnpm@10.12.1+sha256.889bac470ec93ccc3764488a19d6ba8f9c648ad5e50a9a6e4be3768a5de387a3",
+	"packageManager": "pnpm@10.14.0",
 	"engines": {
 		"node": ">=22",
 		"pnpm": ">=10"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.0.6",
-		"@libsql/client": "^0.15.9",
+		"@biomejs/biome": "^2.1.4",
+		"@libsql/client": "^0.15.10",
 		"@rivetkit/actor": "^0.9.8",
-		"@types/node": "^24.0.10",
-		"better-auth": "^1.2.12",
+		"@types/node": "^24.2.1",
+		"better-auth": "^1.3.4",
 		"linq-extensions": "^1.0.4",
 		"tsup": "^8.5.0",
 		"tsx": "^4.20.3",
