--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"linq-extensions": "^1.0.4",
 		"tsup": "^8.5.0",
 		"tsx": "^4.20.3",
+		"typescript": "^5.9.2",
 		"vitest": "^3.2.4"
 	},
 	"peerDependencies": {
