--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
 	"name": "@joshua1/rivetkit-better-auth",
 	"version": "0.3.5",
-	"description": "Remult ORM adapter for better-auth",
+	"description": "Rivetkitadapter for better-auth",
 	"license": "ISC",
-	"author": "taivo@github",
+	"author": "joshua1@github",
 	"exports": {
 		".": "./src/index.ts"
 	},
 	"type": "module",
 	"keywords": [
 		"better-auth",
-		"remult",
-		"orm adapter",
+		"rivetkit",
 		"auth adapter"
 	],
 	"repository": "https://github.com/nerdfolio/remult-better-auth.git",
