--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"name": "@joshua1/rivet-kit-libs-workspace",
 	"scripts": {
 		"dev": "npx turbo dev",
-		"build": "npx turbo build"
+		"build": "npx turbo build",
+		"publish": "npx turbo publish"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.1",
